--- a/config/locales/menu.zh-CN.yml
+++ b/config/locales/menu.zh-CN.yml
@@ -95,7 +95,7 @@
   mail:
     login_from: "登录页面地址"
     this_is_a_notification_mail_please_do_not_reply: "这是一封提醒邮件，请勿直接通过邮件回复."
-    welcome_subject: "欢迎加入 %{app_name} 社区"
+    welcome_subject: "欢迎加入 %{app_name}"
     welcome_title: "欢迎加入 %{app_name}"
     you_have_successfully: "你已经成功在"
     registered_an_account: "注册了账号。"
