--- a/config/locales/menu.zh-TW.yml
+++ b/config/locales/menu.zh-TW.yml
@@ -95,7 +95,7 @@
   mail:
     login_from: "登錄頁面地址"
     this_is_a_notification_mail_please_do_not_reply: "這是一封提醒郵件，請勿直接通過郵件回覆."
-    welcome_subject: "歡迎加入 %{app_name} 社區"
+    welcome_subject: "歡迎加入 %{app_name}"
     welcome_title: "歡迎加入 %{app_name}"
     you_have_successfully: "你已經成功在"
     registered_an_account: "註冊了賬號。"
